--- a/app/src/main/res/layout/recycle_list.xml
+++ b/app/src/main/res/layout/recycle_list.xml
@@ -1,28 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<me.jessyan.mvpart.demo.mvp.ui.widget.AutoCardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:layout_width="match_parent"
-                                                   android:layout_height="550px"
-                                                   android:layout_marginRight="15px"
-                                                   android:layout_marginBottom="15px"
-    >
+<me.jessyan.mvpart.demo.mvp.ui.widget.AutoCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="550px"
+    android:layout_marginBottom="15px"
+    android:layout_marginRight="15px">
 
-    <ImageView
-        android:id="@+id/iv_avatar"
+    <com.zhy.autolayout.AutoRelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        tools:src="#000000" />
+        android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/iv_avatar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"/>
 
-    <TextView
-        android:id="@+id/tv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
-        android:layout_marginBottom="10px"
-        android:textColor="@color/white"
-        android:textSize="40px"
-        tools:text="ss" />
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="10px"
+            android:layout_alignParentBottom="true"
+            android:textSize="40px"
+            tools:text="title"/>
+
+    </com.zhy.autolayout.AutoRelativeLayout>
 
 </me.jessyan.mvpart.demo.mvp.ui.widget.AutoCardView>
